--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   <title>Frontend Mentor | Advice generator app</title>
 </head>
 <body>
-  
-  <div class="wrapper">
-    <div class="quote-box">
-      <h1>ADVICE #<span class="advice-id"></span></h1>
-      <p class="quote"></p>
-      <img src="images/pattern-divider-desktop.svg" class="divider">
+  <main>
+    <div class="wrapper">
+      <div class="quote-box">
+        <h1>ADVICE #<span class="advice-id"></span></h1>
+        <p class="quote"></p>
+        <img src="images/pattern-divider-desktop.svg" class="divider">
+      </div>
+      <div class="die">
+        <img src="images/icon-dice.svg" alt="die button">
+      </div>
     </div>
-    <div class="die">
-      <img src="images/icon-dice.svg" alt="die button">
-    </div>
-  </div>
-
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
