Added alt text to line divider image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="quote-box">
         <h1>ADVICE #<span class="advice-id"></span></h1>
         <p class="quote"></p>
-        <img src="images/pattern-divider-desktop.svg" class="divider">
+        <img src="images/pattern-divider-desktop.svg" class="divider" alt="divider">
       </div>
       <div class="die">
         <img src="images/icon-dice.svg" alt="die button">
